tests/baselines/reference/parserClassDeclaration2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration2.ts (6 errors) ====
    class C implements A implements B {
                         ~~~~~~~~~~
!!! error TS1005: '{' expected.
                                    ~
!!! error TS1005: ';' expected.
                                      ~
!!! error TS1005: ';' expected.
                       ~
!!! error TS2304: Cannot find name 'A'.
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
                                    ~
!!! error TS2304: Cannot find name 'B'.
    }